[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/world/ui/Textbox.gd" type="Script" id=1]

[node name="Textbox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sections" type="HBoxContainer" parent="."]
margin_top = 320.0
margin_right = 640.0
margin_bottom = 400.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfileBox" type="NinePatchRect" parent="Sections"]
self_modulate = Color( 0.215686, 0, 0, 1 )
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
patch_margin_left = 20
patch_margin_top = 16
patch_margin_right = 17
patch_margin_bottom = 17

[node name="Profile" type="TextureRect" parent="Sections/ProfileBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -22.0
margin_right = 22.0
margin_bottom = 22.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" type="NinePatchRect" parent="Sections"]
self_modulate = Color( 0.321569, 0, 0, 1 )
margin_left = 80.0
margin_right = 560.0
margin_bottom = 80.0
rect_min_size = Vector2( 480, 0 )
patch_margin_left = 16
patch_margin_top = 15
patch_margin_right = 14
patch_margin_bottom = 13

[node name="Text" type="RichTextLabel" parent="Sections/TextBox"]
margin_left = 15.0
margin_top = 10.0
margin_right = 465.0
margin_bottom = 70.0
text = "Welcome!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBox" type="NinePatchRect" parent="Sections"]
self_modulate = Color( 0.215686, 0, 0, 1 )
margin_left = 560.0
margin_right = 640.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
patch_margin_left = 23
patch_margin_top = 15
patch_margin_right = 14
patch_margin_bottom = 15

[node name="Next" type="Button" parent="Sections/ButtonBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -30.0
margin_right = 16.0
margin_bottom = -5.0
rect_min_size = Vector2( 32, 25 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skip" type="Button" parent="Sections/ButtonBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = 5.0
margin_right = 16.0
margin_bottom = 30.0
rect_min_size = Vector2( 32, 25 )
text = "Skip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Sections/ButtonBox/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Sections/ButtonBox/Skip" to="." method="_on_Skip_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
